src/test/deca/context/invalid/created/SansObjet/InvalidTypeWhile.deca
// Description:
//    Teste une condition de while qui n'est pas un boolean
// Resultats:
//   InvalidTypeWhile.deca:7:11: Error: Expected expression type is 'boolean', got 'int'

{
    while(1+1) {
        println("aaa");
    }
}